<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        style="@style/Header"
        android:layout_width="match_parent" >

        <Button
            android:id="@+id/merge_header_pre"
            style="@style/Header.Button"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/button_pre" />

        <Button
            android:id="@+id/merge_header_next"
            style="@style/Header.Button"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/button_next"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/merge_header_title"
            style="@style/Header.Title"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name" />

    </RelativeLayout>

</merge>