<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/merget_header" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dip"
        android:background="@drawable/consult_background" >

        <Button
            android:id="@+id/fragemnt_consult_login"
            android:layout_width="150dip"
            android:layout_height="30dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:background="@drawable/consult_loginbutton"
            android:text="@string/app_login"
            android:textColor="@color/clean"
            android:textSize="15dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent" >
        </LinearLayout>
    </RelativeLayout>

    <TableLayout
        style="@style/ConsultTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent" >

        <TableRow
            android:id="@+id/fragment_consulting_tablerowhistory"
            style="@style/ConsultTableRow"
            android:layout_width="match_parent" >

            <RelativeLayout
                style="@style/ConsultTableRowLayout"
                android:layout_width="match_parent"
                android:background="@color/transparent" >

                <TextView
                    style="@style/ConsultTableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/app_hisoryconsultiing" />

                <ImageView
                    style="@style/DirectLink.Image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:visibility="visible" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:id="@+id/fragment_consulting_tablerowcreate"
            style="@style/ConsultTableRow"
            android:layout_width="match_parent" >

            <RelativeLayout
                style="@style/ConsultTableRowLayout"
                android:layout_width="match_parent"
                android:background="@color/transparent" >

                <TextView
                    style="@style/ConsultTableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/app_createconsulting" />

                <ImageView
                    style="@style/DirectLink.Image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:visibility="visible" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>